ci: add permissions to write to packages and gh pages

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -48,6 +48,8 @@ jobs:
           directory: "build/reports/jacoco"
 
   release-and-delivery:
+    permissions:
+      packages: write
     concurrency:
         # Allow only one release at a time.
         group: release-and-delivery-${{ github.event.number || github.ref }}
@@ -84,6 +86,8 @@ jobs:
   documentation-deploy:
     needs:
       - release-and-delivery
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     if: needs.release-and-delivery.outputs.release-status == 'released'
     steps:
