--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ kotest = "5.8.0"
 ktor = "2.3.7"
 
 [libraries]
+archunit = { module = "com.tngtech.archunit:archunit-junit5", version = "1.2.1" }
 kotest-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 kotest-assertions-core-jvm = { module = "io.kotest:kotest-assertions-core-jvm", version.ref = "kotest" }
@@ -26,6 +27,7 @@ sl4j = { module = "org.slf4j:slf4j-simple", version = "2.0.3" }
 
 [bundles]
 kotlin-testing = [
+    "archunit",
     "kotest-junit5",
     "kotest-assertions-core",
     "kotest-assertions-core-jvm",
