--- a/docs/rest-api/rest-api-docs.yml
+++ b/docs/rest-api/rest-api-docs.yml
@@ -1,13 +1,13 @@
 openapi: 3.0.0
 servers:
-  - description: WoDT Digital Twins Platform API
+  - description: WoDT Platform API
     url: http://localhost:<port>
 info:
-  description: This is the API of exposed by the WoDT Digital Twins Platform
+  description: This is the API of exposed by the WoDT Platform
   version: 1.0.0
-  title: WoDT Digital Twins Platform API
+  title: WoDT Platform API
   contact:
-    email: andrea.giulianelli4@studio.unibo.it
+    email: andrea.giulianelli7@unibo.it
   license:
     name: Apache 2.0 License
     url: 'https://www.apache.org/licenses/LICENSE-2.0'
@@ -22,107 +22,114 @@ paths:
   /wodt:
     get:
       tags:
-        - WoDT Digital Twins Platform Interface API
-      summary: obtain the complete WoDT Digital Twins Platform Knowledge Graph
-      operationId: getWoDTDigitalTwinsPlatformKnowledgeGraph
-      description: obtain the complete view over the WoDT Digital Twins Platform Knowledge Graph
+        - WoDT Platform Interface API
+      summary: obtain the complete Platform Knowledge Graph
+      operationId: getPlatformKnowledgeGraph
+      description: obtain the complete view over the Platform Knowledge Graph
       responses:
         '200':
-          description: current view over the WoDT Digital Twins Platform Knowledge Graph
+          description: current view over the Platform Knowledge Graph
           content:
             text/turtle:
               schema:
                 type: string
-                example: |
-                  <http://localhost:4000/wodt/https://example.com/dt>
-                      <https://healthcareontology.com/ontology#hasFuelLevel>
-                              "37.0"^^<http://www.w3.org/2001/XMLSchema#double>;
-                      <https://healthcareontology.com/ontology#isBusy>
-                              true;
-                      <https://smartcityontology.com/ontology#isApproaching>
-                              <http://example.com/intersection> .
-                  <http://localhost:4000/wodt/https://second-example.com/dt>
-                      <https://healthcareontology.com/ontology#isBusy>
-                              false;
         '204':
-          description: WoDT Digital Twins Knowledge Graph currently empty
+          description: Platform Knowledge Graph currently empty
     post:
       tags:
         - Ecosystem Management Interface API
-      summary: register a new Digital Twin to the WoDT Digital Twins Platform
+      summary: register a new Digital Twin to the WoDT Platform
       operationId: registerDigitalTwin
-      description: Register a new Digital Twin to the WoDT Digital Twins Platform
+      description: Register a new Digital Twin to the WoDT Platform
       responses:
         '202':
           description: registration request accepted
         '400':
-          description: the Digital Twin Descriptor was not structured properly or its mime type was not supported
+          description: the Digital Twin Description was not structured properly or its mime type was not supported
         '409':
-          description: the Digital Twin is already registered to the WoDT Digital Twins Platform
+          description: the Digital Twin is already registered to the WoDT Platform
       requestBody:
         content:
           application/td+json:
             schema:
               example: |
                 {
-                  "id": "https://example.com/dt",
+                  "@context": "https://www.w3.org/2022/wot/td/v1.1",
+                  "id": "http://localhost:3000",
+                  "@type": [
+                    "https://saref.etsi.org/core/Actuator",
+                    "https://w3id.org/rec/Lamp"
+                  ],
+                  "version": {
+                    "instance": "1.2.3",
+                    "model": "1.0.0"
+                  },
+                  "https://purl.org/wodt/physicalAssetId": "lampPA",
+                  "securityDefinitions": {
+                    "nosec_sc": {
+                      "scheme": "nosec"
+                    }
+                  },
+                  "security": "nosec_sc",
                   "properties": {
-                    "is-on-property-key": {
-                      "type": "string",
-                      "observable": true,
-                      "readOnly": true,
-                      "@type": "https://www.w3.org/2001/XMLSchema#boolean",
-                      "https://purl.org/wodt/domainPredicate": "https://lampontology.com/ontology#isOn",
-                      "https://purl.org/wodt/augmentedInteraction": false
+                    "availableActions": {
+                      "@type": "https://purl.org/wodt/AvailableActions",
+                      "readOnly": true
                     },
-                    "located-inside": {
-                      "type": "string",
-                      "observable": true,
-                      "readOnly": true,
-                      "@type": "https://homeontology/ontology#Room",
-                      "https://purl.org/wodt/domainPredicate": "https://lampontology/ontology#isLocatedInside"
+                    "luminosity": {
+                      "https://purl.org/wodt/domainTag": "https://purl.org/onto/LuminosityFlux",
+                      "https://purl.org/wodt/augmentedInteraction": false,
+                      "readOnly": true
                     },
-                    "snapshot": {
-                      "forms": [
-                        {
-                          "href": "ws://localhost:3000/dtkg",
-                          "op": [
-                            "observeproperty"
-                          ],
-                          "subprotocol": "websocket"
-                        }
-                      ],
-                      "type": "string",
-                      "observable": true,
+                    "illuminance": {
+                      "https://purl.org/wodt/domainTag": "https://purl.org/onto/Illuminance",
+                      "https://purl.org/wodt/augmentedInteraction": false,
+                      "readOnly": true
+                    },
+                    "isInRoom": {
+                      "https://purl.org/wodt/domainTag": "https://brickschema.org/schema/Brick#hasLocation",
                       "readOnly": true
                     }
                   },
                   "actions": {
-                    "switch-action-key": {
+                    "switch": {
+                      "https://purl.org/wodt/domainTag": "https://purl.org/onto/SwitchCommand",
+                      "https://purl.org/wodt/augmentedInteraction": false,
                       "forms": [
                         {
-                          "href": "http://localhost:3000/action/switch-action-key",
-                          "op": [
-                            "invokeaction"
-                          ]
+                          "href": "http://localhost:3000/action/switch"
                         }
                       ]
                     }
                   },
-                  "@context": "https://www.w3.org/2019/wot/td/v1",
-                  "https://purl.org/wodt/version": "1.0.0",
-                  "links": [],
-                  "https://purl.org/wodt/physicalAssetId": "lampPA"
-                }
-        description: the Digital Twin Descriptor implemented with a Thing Description following the WoDT Digital Twin Specification
+                  "forms": [
+                    {
+                      "href": "ws://localhost:3000/dtkg",
+                      "subprotocol": "websocket",
+                      "op": "observeallproperties"
+                    }
+                  ],
+                  "links": [
+                    {
+                      "href": "https://raw.githubusercontent.com/Web-of-Digital-Twins/dtd-conceptual-model/refs/heads/main/implementations/wot/dtd-thing-model.tm.jsonld",
+                      "rel": "type",
+                      "type": "application/tm+json"
+                    },
+                    {
+                      "href": "http://localhost:3000/dtkg",
+                      "rel": "https://purl.org/wodt/dtkg"
+                    }
+                  ]
+              }
+        description: the Digital Twin Description implemented with a Thing Description following the abstract conceptual model mappings
 
   /wodt/{digitalTwinUri}:
     get:
       tags:
-        - WoDT Digital Twins Platform Interface API
-      summary: obtain the current local view over the interested Digital Twin Knowledge Graph
+        - WoDT Platform Interface API
+      summary: obtain the current local view over the interested DT DTKG
       operationId: getLocalDigitalTwinKnowledgeGraph
-      description: Obtain the current local view over the interested Digital Twin Knowledge Graph
+      description: Obtain the current local view over the interested DT DTKG
       parameters:
         - in: path
           name: digitalTwinUri
@@ -138,14 +145,6 @@ paths:
             text/turtle:
               schema:
                 type: string
-                example: |
-                  <http://localhost:4000/wodt/https://example.com/dt>
-                    <https://healthcareontology.com/ontology#hasFuelLevel>
-                            "37.0"^^<http://www.w3.org/2001/XMLSchema#double>;
-                    <https://healthcareontology.com/ontology#isBusy>
-                            true;
-                    <https://smartcityontology.com/ontology#isApproaching>
-                            <http://example.com/intersection> .
 
         '204':
           description: the WoDT Digital Twin is registered but its Digital Twin Knowledge Graph is currently empty
@@ -173,15 +172,15 @@ paths:
         '400':
           description: the Digital Twin URI is not specified correctly
         '404':
-          description: Digital Twin not
+          description: Digital Twin not registered
 
   /wodt/sparql:
     post:
       tags:
-        - WoDT Digital Twins Platform Interface API
-      summary: perform a SPARQL Query over the WoDT Digital Twins Knowledge Graph
+        - WoDT Platform Interface API
+      summary: perform a SPARQL Query over the Platform Knowledge Graph
       operationId: queryPlatformKnowledgeGraph
-      description: perform a SPARQL Query over the WoDT Digital Twins Knowledge Graph using the SPARQL Protocol
+      description: perform a SPARQL Query over the Platform Knowledge Graph using the SPARQL Protocol
       responses:
         '200':
           description: valid query, return the results in the specified mime type following the SPARQL Protocol
@@ -207,7 +206,7 @@ paths:
   /wodt/directory:
     get:
       tags:
-        - WoDT Digital Twins Platform Interface API
+        - WoDT Platform Interface API
       summary: get the Digital Twins that are associated with a particular Physical Asset identifier
       operationId: multiModelDirectory
       description: get the Digital Twins that are associated with a particular Physical Asset identifier
@@ -227,6 +226,6 @@ paths:
               schema:
                 example: [ "https://example.it/dt", "http://second-example.it/dt" ]
         '204':
-          description: any registered WoDT Digital Twin is associated with that Physical Asset identifier
+          description: no registered WoDT Digital Twin is associated with that Physical Asset identifier
         '400':
           description: the request is malformed, missed Physical Asset identifier
