docs: fix api tags

--- a/docs/rest-api/rest-api-docs.yml
+++ b/docs/rest-api/rest-api-docs.yml
@@ -15,7 +15,7 @@ info:
 tags:
   - name: Ecosystem Management Interface API
     description: This is the API exposed by the Ecosystem Management Interface.
-  - name: WoDT Digital Twins Platform Interface API
+  - name: WoDT Platform Interface API
     description: This is the API exposed by the WoDT Digital Twins Platform Interface for Consumers.
 
 paths:
